Another Git Test

--- a/config.ini
+++ b/config.ini
@@ -1,3 +1,3 @@
 Source Root = C:\github\LabVIEW Hacker\lifa\
 Install Root = C:\Program Files\National Instruments\LabVIEW 2011\vi.lib\LabVIEW Interface for Arduino\
-Ignore = .ini, .git, .vipb, .lvproj, .md, .aliases, .lvlps, .exe
+Ignore = .ini, .git, .vipb, .lvproj, .md, .aliases, .lvlps, .exe, vmtest
