--- a/config.ini
+++ b/config.ini
@@ -1,3 +1,3 @@
 Source Root = C:\github\labviewhacker\lifa\
-Install Root = C:\Program Files (x86)\National Instruments\LabVIEW 2011\vi.lib\LabVIEW Interface for Arduino\
+Install Root = C:\Program Files (x86)\National Instruments\LabVIEW 2011\vi.lib\LabVIEW Hacker\LabVIEW Interface for Arduino\
 Ignore = .git, .vipb, .md, .exe
